--- a/Final_AED_Project/src/UserInterface/SystemAdmin/MedicalCareWorkAreaJpanel.form
+++ b/Final_AED_Project/src/UserInterface/SystemAdmin/MedicalCareWorkAreaJpanel.form
@@ -43,7 +43,7 @@
     <Container class="javax.swing.JPanel" name="jPanel3">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="46" green="25" red="d" type="rgb"/>
+          <Color blue="33" green="33" red="0" type="rgb"/>
         </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[280, 840]"/>
